# whoami-spec

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: minimal.toml  whoami.toml
skill/: SKILL.md
validator/: Cargo.toml
validator/src/: main.rs
