[package]
name = "whoami-cli"
version = "20260331.0.0"
edition = "2021"
authors = ["Jake Goldsborough <github@pancakes.email>"]
description = "CLI tool for whoami.toml - portable AI agent profiles. Create and validate profiles interactively."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakegoldsborough/whoami-spec"
homepage = "https://github.com/jakegoldsborough/whoami-spec"
documentation = "https://github.com/jakegoldsborough/whoami-spec#readme"
keywords = ["ai", "agent", "profile", "config", "toml"]
categories = ["command-line-utilities", "config"]
readme = "../README.md"

[[bin]]
name = "wai"
path = "src/main.rs"

[[bin]]
name = "whoami-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
